--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 body {
   overscroll-behavior-y: none;
+  overscroll-behavior-x: none;
   background-color: #0f0f0f;
   color: #ffffe2;
   margin: 0;
